fixed next button wrong color

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -302,3 +302,17 @@ ul {
 input:focus {
     outline-width: 0;
 }
+
+.btn-default:active:hover,
+.btn-default.active:hover,
+.open > .dropdown-toggle.btn-default:hover,
+.btn-default:active:focus,
+.btn-default.active:focus,
+.open > .dropdown-toggle.btn-default:focus,
+.btn-default:active.focus,
+.btn-default.active.focus,
+.open > .dropdown-toggle.btn-default.focus {
+  color: #333;
+  background-color: #387FAA;
+  border-color: #8c8c8c;
+}
